--- a/.github/workflows/quarto-deploy.yml
+++ b/.github/workflows/quarto-deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
-          version: 'latest'
+          version: '1.4.550'
 
       - name: Install R and Packages
         uses: r-lib/actions/setup-r@v2
