--- a/.github/workflows/quarto-deploy.yml
+++ b/.github/workflows/quarto-deploy.yml
@@ -20,6 +20,11 @@ jobs:
       - name: Install R and Packages
         uses: r-lib/actions/setup-r@v2
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev build-essential
+
       - name: Restore R environment
         run: |
           install.packages("renv")
