Update quarto-deploy.yml to add more system dependencies

--- a/.github/workflows/quarto-deploy.yml
+++ b/.github/workflows/quarto-deploy.yml
@@ -23,7 +23,12 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev build-essential
+          sudo apt-get install -y \
+          libcurl4-openssl-dev \
+          libssl-dev \
+          libxml2-dev \
+          build-essential \
+          r-base-dev
 
       - name: Restore R environment
         run: |
