--- a/.github/workflows/quarto-deploy.yml
+++ b/.github/workflows/quarto-deploy.yml
@@ -24,11 +24,18 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-          libcurl4-openssl-dev \
-          libssl-dev \
-          libxml2-dev \
           build-essential \
-          r-base-dev
+          r-base \
+          r-base-dev \
+          libssl-dev \
+          libcurl4-openssl-dev \
+          libxml2-dev \
+          libfontconfig1-dev \
+          libfreetype6-dev \
+          libpng-dev \
+          libtiff5-dev \
+          libjpeg-dev
+
 
       - name: Restore R environment
         run: |
