--- a/.github/workflows/quarto-deploy.yml
+++ b/.github/workflows/quarto-deploy.yml
@@ -24,22 +24,26 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-          build-essential \
-          r-base \
-          r-base-dev \
-          libssl-dev \
-          libcurl4-openssl-dev \
-          libxml2-dev \
-          libfontconfig1-dev \
-          libfreetype6-dev \
-          libpng-dev \
-          libtiff5-dev \
-          libjpeg-dev
+            build-essential \
+            r-base \
+            r-base-dev \
+            libssl-dev \
+            libcurl4-openssl-dev \
+            libxml2-dev \
+            libfontconfig1-dev \
+            libfreetype6-dev \
+            libpng-dev \
+            libtiff5-dev \
+            libjpeg-dev
 
+      - name: Create Makevars to fix digest compilation
+        run: |
+          mkdir -p ~/.R
+          echo 'CFLAGS=-std=gnu99' >> ~/.R/Makevars
+          echo 'CXXFLAGS=-std=gnu++14' >> ~/.R/Makevars
 
       - name: Restore R environment
         run: |
-          options(pkgType = "binary")
           install.packages("renv")
           renv::restore()
         shell: Rscript {0}
