--- a/.github/workflows/quarto-deploy.yml
+++ b/.github/workflows/quarto-deploy.yml
@@ -22,6 +22,12 @@ jobs:
         with:
           r-version: '4.4.0'
 
+      # NEW STEP: Install system dependencies (libglpk40) to fix igraph installation issue
+      - name: Install system libraries
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libglpk40
+
       - name: Install R Dependencies
         uses: r-lib/actions/setup-renv@v2
         with:
