--- a/_variables.yml
+++ b/_variables.yml
@@ -4,7 +4,7 @@ instructor:
   name: Dr. Miel Hostens
   name_no_title: Miel Hostens
   email: miel.hostens@cornell.edu
-  url: "https://bovi-analytics.com/researchers/miel-hostens.html"
+  url: "https://bovi-analytics.org/researchers/miel-hostens.html"
   twitter: "@MielHostens"
   github: "https://github.com/Bovi-Analytics/"
   office: "Morrison Hall 273, Ithaca, NY 14853"
@@ -21,7 +21,7 @@ lab:
   location: "Morrison Hall 273, Ithaca, NY 14853"
   github: "https://github.com/Bovi-Analytics/"
   linkedin: "https://www.linkedin.com/in/miel-hostens-56b1339b/"
-  url: "https://www.bovi-analytics.com"
+  url: "https://www.bovi-analytics.org"
   copyright_year: "2024"
   slack: "https://bovi-analytics.slack.com"
 
