--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,7 +26,7 @@ website:
       - text: "Open positions"
         file: open-positions/index.qmd
       - text: "Portal"
-        href: "https://portal.bovi-analytics.com"
+        href: "https://portal.bovi-analytics.org"
       - text: "Projects"
         file: projects/index.qmd
       - text: "Tutorials"
